[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "viscore"
version = "0.0.2"
authors = [
  { name="David Novak", email="davidnovak9000@gmail.com" }
]
maintainers = [
  { name="David Novak", email="davidnovak9000@gmail.com" }
]
description = "Dimensionality reduction evaluation toolkit"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
license = { file = "LICENSE" }

dependencies = [
    "numba==0.59.0",
    "scipy>=1.14",
    "pynndescent>=0.5.11",
    "scanpy>=1.10",
    "numpy>=1.26.3",
    "pandas>=2.0.3",
    "matplotlib>=3.9",
    "scikit-learn>=1.6",
    "pyemd==1.0.0"
]

[project.optional-dependencies]
tutorials = [
    "ipykernel",
    "ipython"
]
test = [
    "pytest",
    "coverage"
]

[tool.coverage.run]
source = ["src/viscore"]
omit = ["**/test_*.py"]

[tool.pytest.ini_options]
testpaths = ["tests/*.py"]
xfail_strict = true
addopts = [
    "--import-mode=importlib", # allow using test files with same name
]

[tool.ruff]
exclude = [
    "benchmarking"
]
line-length = 120
src = ["src"]
indent-width = 4
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W"
]
ignore = [
    "E501",
    "D213"
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[project.urls]
Homepage = "https://github.com/saeyslab/ViScore"
